@@ -1,6 +1,9 @@
 Noteworthy changes in version 2.2.17 (unreleased)
 -------------------------------------------------
 
+  * dirmngr: Support the "openpgpkey" subdomain feature from
+    draft-koch-openpgp-webkey-service-07. [#4590].
+
 
 Noteworthy changes in version 2.2.16 (2019-05-28)
 -------------------------------------------------
@@ -168,7 +171,7 @@ Noteworthy changes in version 2.2.12 (2018-12-14)
 
   * gpg: Fix a bug where a LF was accidentally written to the console.
 
-  * gpg: --card-status now shwos whether a card has the new KDF
+  * gpg: --card-status now shows whether a card has the new KDF
     feature enabled.
 
   * agent: New runtime option --s2k-calibration=MSEC.  New configure
